# my-malloc-project

./: CMakeLists.txt  README.md
include/: allocator.h  allocator_helper.h  allocator_test.h  base.h  header.h  rand.h  rand_test.h  rb_tree.h  rb_tree_test.h  test.h
src/: README.md  allocator.c  allocator_helper.c  base.c  header.c  rb_tree.c
test/: allocator_test.c  rand.c  rand_test.c  rb_tree_test.c  test.c
